redefine about me parragraph+tech skills section

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <span class="meta">Years building web experiences</span>
               </div>
               <div>
-                <span class="metric">15</span>
+                <span class="metric">3+</span>
                 <span class="meta">Successful launches shipped</span>
               </div>
             </div>
@@ -100,33 +100,35 @@
           <div class="section-heading">
             <h2>About me</h2>
             <p>
-              I design and build high-impact interfaces that bridge business
-              goals and user needs. With a background in product strategy, I
-              enjoy shaping features end-to-end—from early discovery to final
-              polish.
+              I design and build thoughtful interfaces that connect user needs
+              with business goals. With a growing background in product
+              strategy, I enjoy contributing to features end-to-end—from early
+              discovery to final polish.
             </p>
           </div>
           <div class="about-grid">
             <article class="about-card">
               <h3>Holistic approach</h3>
               <p>
-                I partner closely with stakeholders to uncover the core problem,
-                prototype rapidly, and iterate with data-driven insight for
-                measurable outcomes.
+                I partner closely with others to uncover core problems,
+                prototype quickly, and iterate using feedback and data to
+                improve outcomes.
               </p>
             </article>
             <article class="about-card">
               <h3>Design systems</h3>
               <p>
-                Component-driven architectures bring consistency and scale. I
-                craft modular systems that evolve gracefully with your product.
+                Component-driven approaches help create consistency and scale. I
+                enjoy building modular UI patterns that can grow and adapt as a
+                product evolves.
               </p>
             </article>
             <article class="about-card">
               <h3>Performance-minded</h3>
               <p>
-                From accessibility to web vitals, I obsess over experience
-                quality so your product feels fast, inclusive, and trustworthy.
+                From accessibility to web vitals, I care deeply about experience
+                quality, aiming to build interfaces that feel fast, inclusive,
+                and reliable.
               </p>
             </article>
           </div>
@@ -140,33 +142,44 @@
           <div class="skills-grid">
             <div class="skill-card">
               <span class="tag">Frontend</span>
-              <h3>React, Next.js, Vite</h3>
-              <p>Modern frameworks powering interactive experiences.</p>
+              <h3>HTML, CSS, JavaScript (ES6+),React, Next.js, Vite</h3>
+              <p>
+                Building responsive, interactive user interfaces with modern
+                tooling.
+              </p>
             </div>
             <div class="skill-card">
-              <span class="tag">Interface</span>
-              <h3>TypeScript, Tailwind, Styled Systems</h3>
-              <p>Type-safe styling and component scalability.</p>
+              <span class="tag">Interface & Styling</span>
+              <h3>TypeScript, Tailwind CSS, CSS Modules</h3>
+              <p>Type-safe components and scalable styling patterns.</p>
             </div>
             <div class="skill-card">
-              <span class="tag">Craft</span>
-              <h3>Figma, Framer, Design Tokens</h3>
-              <p>Rapid prototyping and cohesive design language.</p>
+              <span class="tag">Design & Prototyping</span>
+              <h3>Figma</h3>
+              <p>
+                Rapid prototyping and close alignment between design and
+                implementation.
+              </p>
             </div>
             <div class="skill-card">
-              <span class="tag">Infra</span>
-              <h3>Node.js, GraphQL, REST</h3>
-              <p>Reliable backbones for data-rich products.</p>
+              <span class="tag">Backend / APIs</span>
+              <h3>Node.js, REST APIs, MongoDB</h3>
+              <p>Consuming and building APIs for data-driven features.</p>
             </div>
             <div class="skill-card">
-              <span class="tag">Quality</span>
-              <h3>Jest, Playwright</h3>
-              <p>Automated testing to keep features resilient.</p>
+              <span class="tag">Tooling & Workflow</span>
+              <h3>Git, GitHub, CI/CD</h3>
+              <p>
+                Version control, pull requests, and basic automated workflows to
+                support reliable development.
+              </p>
             </div>
             <div class="skill-card">
               <span class="tag">Collaboration</span>
-              <h3>Agile, Product Discovery</h3>
-              <p>Cross-functional rituals that accelerate delivery.</p>
+              <h3>Agile practices, Product Discovery</h3>
+              <p>
+                Working in cross-functional teams through iterative development.
+              </p>
             </div>
           </div>
         </section>
