--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
               Hello, I am FullStack Developer building modern web experiences
             </h1>
             <p class="lede">
-              I'm focused on writing maintainable code and creating intuitive
-              interfaces that users love.
+              Open to collaboration and junior full-stack opportunities. Let’s
+              build something great.
             </p>
             <div class="cta-group">
               <a href="#projects" class="cta primary">View featured work</a>
-              <a href="#contact" class="cta ghost">Start a project</a>
+              <a href="#contact" class="cta ghost">Get in touch</a>
             </div>
           </div>
           <div class="hero-visual">
@@ -98,10 +98,10 @@
           <div class="section-heading">
             <h2>About me</h2>
             <p>
-              I design and build thoughtful interfaces that connect user needs
-              with business goals. With a growing background in product
-              strategy, I enjoy contributing to features end-to-end—from early
-              discovery to final polish.
+              I build thoughtful interfaces that connect user needs with
+              business goals. I enjoy working on features from early discovery
+              to final polish, writing clean, maintainable code, and creating
+              web applications that users love.
             </p>
           </div>
           <div class="about-grid">
@@ -185,7 +185,10 @@
         <section id="projects" class="section projects">
           <div class="section-heading">
             <h2>My projects</h2>
-            <p>A snapshot of recent collaborations and flagship builds.</p>
+            <p>
+              Projects showcasing my experience with modern full-stack
+              technologies.
+            </p>
           </div>
           <div class="projects-grid">
             <article class="project-card">
@@ -335,7 +338,8 @@
           </p>
         </div>
         <div class="footer-links">
-          <a href="mailto:gunkodmytro39@gmail.com">gunkodmytro39@gmail.com</a>
+          <a href="tel:+33 6 20 41 96 88">Phone</a>
+          <a href="mailto:gunkodmytro39@gmail.com">Email</a>
           <a
             href="https://www.linkedin.com/in/dmytro-gunko-128310368/"
             target="_blank"
