add Formspree library which care the form logic, contact.js error and success msg, css for submit

--- a/index.html
+++ b/index.html
@@ -291,7 +291,11 @@
             </p>
           </div>
 
-          <form class="contact-form">
+          <form
+            class="contact-form"
+            action="https://formspree.io/f/mvzzvjpo"
+            method="POST"
+          >
             <div class="field-grid">
               <label class="field">
                 <span>Name</span>
@@ -360,5 +364,6 @@
       </footer>
     </div>
     <script src="/script.js" defer></script>
+    <script src="contact.js" defer></script>
   </body>
 </html>
