change a footer html, css

--- a/index.html
+++ b/index.html
@@ -333,30 +333,19 @@
         </section>
       </main>
 
+
       <footer class="site-footer">
-        <div class="footer-brand">
-          <span class="brand-mark">DG</span>
-          <p>
-            Open to collaboration and junior full-stack opportunities. Let’s
-            build something great.
-          </p>
-        </div>
-        <div class="footer-links">
-          <a href="tel:+33 6 20 41 96 88">Phone</a>
-          <a href="mailto:gunkodmytro39@gmail.com">Email</a>
-          <a
-            href="https://www.linkedin.com/in/dmytro-gunko-128310368/"
-            target="_blank"
-            rel="noreferrer"
-            >LinkedIn</a
-          >
-          <a
-            href="https://github.com/DmytroGunko39"
-            target="_blank"
-            rel="noreferrer"
-            >GitHub</a
-          >
-          <a href="#hero">Back to top</a>
+        <div class="footer-row">
+          <div class="footer-brand">
+            <span class="brand-mark">DG</span>
+          </div>
+          <address class="footer-links">
+            <a href="tel:+33620419688">+33 6 20 41 96 88</a>
+            <a href="mailto:gunkodmytro39@gmail.com">gunkodmytro39@gmail.com</a>
+            <a href="https://www.linkedin.com/in/dmytro-gunko-128310368/" target="_blank" rel="noreferrer">LinkedIn</a>
+            <a href="https://github.com/DmytroGunko39" target="_blank" rel="noreferrer">GitHub</a>
+            <a href="#hero">Back to top</a>
+          </address>
         </div>
         <p class="footer-meta">
           © <span id="year"></span> Dmytro Gunko. All rights reserved.
