add CV link, change css

--- a/index.html
+++ b/index.html
@@ -285,9 +285,15 @@
         <section id="contact" class="section contact">
           <div class="section-heading">
             <h2>Get in touch</h2>
-            <p>
+            <p class="contact-text">
               Interested in working together or have a question? Feel free to
-              reach out.
+              reach out or
+              <a
+                href="/Dmytro_Gunko_Fullstack_Developer_ATS.pdf"
+                download
+                class="text-link"
+                >download my CV</a
+              >.
             </p>
           </div>
 
@@ -333,7 +339,6 @@
         </section>
       </main>
 
-
       <footer class="site-footer">
         <div class="footer-row">
           <div class="footer-brand">
@@ -342,8 +347,18 @@
           <address class="footer-links">
             <a href="tel:+33620419688">+33 6 20 41 96 88</a>
             <a href="mailto:gunkodmytro39@gmail.com">gunkodmytro39@gmail.com</a>
-            <a href="https://www.linkedin.com/in/dmytro-gunko-128310368/" target="_blank" rel="noreferrer">LinkedIn</a>
-            <a href="https://github.com/DmytroGunko39" target="_blank" rel="noreferrer">GitHub</a>
+            <a
+              href="https://www.linkedin.com/in/dmytro-gunko-128310368/"
+              target="_blank"
+              rel="noreferrer"
+              >LinkedIn</a
+            >
+            <a
+              href="https://github.com/DmytroGunko39"
+              target="_blank"
+              rel="noreferrer"
+              >GitHub</a
+            >
             <a href="#hero">Back to top</a>
           </address>
         </div>
