add rentalCar project

--- a/index.html
+++ b/index.html
@@ -228,15 +228,16 @@
             </article>
             <article class="project-card">
               <div class="project-label">Individual Project · Front-End</div>
-              <h3>Image Gallery Project</h3>
+              <h3>RentalCar — Premium Car Rental Service</h3>
               <p>
-                Developed a responsive image gallery using JavaScript with API
-                integration, pagination, and lightbox viewing. The project
-                focuses on clean UI, asynchronous data fetching, and
-                user-friendly image browsing.
+                A modern full-stack car rental application built with Next.js
+                16, TypeScript, Tailwind CSS, Zustand, and Formik. Users can
+                browse cars, filter by multiple parameters, view detailed
+                information, add favorites, and book cars via a fully validated
+                form.
               </p>
               <a
-                href="https://dmytrogunko39.github.io/goit-js-hw-12/"
+                href="https://rental-car-zeta-seven.vercel.app/"
                 class="text-link"
                 target="_blank"
                 rel="noopener noreferrer"
